<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Checkout</string>
    <string name="use_case_title_static">Use case #1. Static responses</string>
    <string name="use_case_desc_static">Use static responses to test in-app billing</string>
    <string name="buy">Buy</string>
    <string name="consume">Consume</string>
    <string name="use_case_title_banner">Use case #2. Ad banner</string>
    <string name="use_case_desc_banner">Show an ad banner. Remove it if user purchases an ad-free version</string>
    <string name="ad_banner_text">Checkout - the best in-app billing library</string>
    <string name="lorem_ipsum_long" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque mollis est nec venenatis tempus. In molestie rutrum nibh, ut commodo felis sodales et. Ut et aliquam augue. Ut molestie dignissim tempus. In pharetra tincidunt arcu in lacinia. Aliquam id eleifend velit. Donec tincidunt ipsum in enim eleifend dictum. Phasellus aliquam leo at metus blandit semper.  Duis feugiat mauris sit amet venenatis sagittis. Cras consequat, orci vitae lobortis dignissim, augue urna faucibus ex, id sollicitudin lacus diam ac justo. Pellentesque finibus, nisl non porttitor interdum, elit enim condimentum erat, id aliquet nibh ante quis libero. Vestibulum risus odio, elementum ac lorem imperdiet, tristique aliquam sapien. Nunc sed justo vel augue faucibus consectetur. Mauris scelerisque urna tempus dui fermentum fermentum. Mauris et hendrerit augue. Maecenas lobortis dictum ipsum, eu condimentum enim pretium aliquam. Nullam sed nulla feugiat, fringilla sapien et, cursus libero. Mauris mauris dolor, luctus sit amet lacus eget, suscipit dictum nisl. Proin id ipsum at tortor tincidunt cursus quis sit amet augue.  Morbi eleifend sapien at suscipit viverra. Nulla interdum libero quis erat malesuada vestibulum. Aenean congue nisl sit amet erat condimentum vehicula. Aliquam id lacus odio. Nam a nisi eu ligula luctus dapibus in in eros. Pellentesque nec consectetur tortor. Pellentesque porttitor ultrices nisl in scelerisque. Pellentesque tincidunt, dui vel pellentesque convallis, nunc arcu vehicula nisi, at malesuada nunc tellus sed lacus.</string>
    <string name="remove_ad_banner">Remove ad banner</string>
    <string name="use_case_title_skus">Use case #3. List of SKUs</string>
    <string name="use_case_desc_skus">Show a list of SKUs available for purchase. Click an item to purchase or consume it</string>
    <string name="icon">icon</string>
    <string name="use_case_title_subscriptions">Use case #4. Subscriptions</string>
    <string name="use_case_desc_subscriptions">Show a list of subscriptions. Allow buying a subscription and changing it</string>
    <string name="change">Change</string>
    <string name="_1_buy">1. Buy</string>
    <string name="_2_select">2. Select</string>
    <string name="_3_change">3. Change</string>
    <string name="purchases_changed">Play Store: purchases have changed!</string>
    <string name="use_case_title_fragment">Use case #5. Fragments</string>
    <string name="use_case_desc_fragment">Buy and consume from a fragment</string>
    <string name="use_case_title_history">Use case #6. History</string>
    <string name="use_case_desc_history">Show billing history</string>
    <string name="use_case_title_vr">Use case #7. Virtual reality</string>
    <string name="use_case_desc_vr">Do a purchase in VR mode</string>
</resources>